// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  className="lucid-SuccessLightIcon"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-clickable"
  isClickable={true}
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-disabled lucid-SuccessLightIcon-is-clickable"
  isClickable={true}
  isDisabled={true}
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.default 4`] = `
<Icon
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-active"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.default 5`] = `
<Icon
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-clickable lucid-SuccessLightIcon-is-active"
  isClickable={true}
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.default 6`] = `
<Icon
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-disabled lucid-SuccessLightIcon-is-clickable lucid-SuccessLightIcon-is-active"
  isClickable={true}
  isDisabled={true}
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;
